--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
 		<spring.version>4.3.8.RELEASE</spring.version>
 		<hibernate.version>4.3.11.Final</hibernate.version>
+		<mongodb.version>3.4.2</mongodb.version>
 	</properties>
 	<dependencies>
 	<!-- 
@@ -149,6 +150,23 @@
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring4</artifactId>
 			<version>3.0.2.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.mongodb</groupId>
+		    <artifactId>mongo-java-driver</artifactId>
+		    <version>${mongodb.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-mongodb</artifactId>
+		    <version>1.10.1.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-commons</artifactId>
+		    <version>1.13.1.RELEASE</version>
 		</dependency>
 	</dependencies>
 	<build>
